--- a/.gitignore
+++ b/.gitignore
@@ -17,17 +17,22 @@ xcuserdata/
 timeline.xctimeline
 playground.xcworkspace
 
+# Additional Xcode generated files
+*.xcuserstate
+*.xcworkspace/xcuserdata/
+*.xcworkspace/xcshareddata/WorkspaceSettings.xcsettings
+
 # Swift Package Manager
 #
 # Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
-# Packages/
+Packages/
 # Package.pins
 # Package.resolved
 # *.xcodeproj
 #
 # Xcode automatically generates this directory with a .xcworkspacedata file and xcuserdata
 # hence it is not needed unless you have added a package configuration file to your project
-# .swiftpm
+.swiftpm
 
 .build/
 
@@ -48,6 +53,15 @@ playground.xcworkspace
 # Carthage/Checkouts
 
 Carthage/Build/
+
+# Signing-related files
+*.p12
+*.pem
+*.mobileprovision
+*.key
+*.cer
+*.crt
+*.der
 
 # fastlane
 #
